lab1/Test/L1-A-11-38.cmm
struct {
  struct {
    struct {
      struct {
      }bB4Pa ;
    }y7UTNVwGKB5pHFWpR_nX ;
    int Fo3tqr3_gG4HTVWM7ns ;
    int L8j ;
  }oPvSZq7FXHpQy84CNP0 ;
  int pkOvydiY6v8WU ;
}_wH0c3DrYIcCytxFUL4 ( int mP0r6jCoBaUMxEbQ4 ) {
  struct sCa8QDSiT {
    struct AWA _M8S_lMlD6uYD ;
    struct S4r eZf9e ;
    int j_hIa4XQ6Fr7qGNhu8HN ;
    float B5a92frp_9Zd9cmW ;
  }vS0a0mYCc91 [ 188644076 ] = thnV49NHyGMFnQih5 , 
    _8us3OLlnuOqAIU5AtZg ;
  while ( P5TztzS )   AkA2ngLNaMw && ut5qoxGxbf46Gp5K__KA 
    < PKoQ - uahnW / ! YyLJsSfTxo [ e4xmZGoZFZ = FNxAoCkyPFMwzucH 
    || pwaDqNyaLFqvw <= mnHTYk5zVdYMzBT + C9pExs * ! - 
    ! s801CvExrS7trOmrWHh ( mAtRhd3L || Y1KPY16KsNWEq 
    >= F3qkVtBU ( AcFjtvODtz1dv , Dmpui9lKg == Mfx4y - 
    poBfZ0xD9 [ i2atceiOwNPXj = VVfRzfkWJDVx0G0vMwhc >= 
    O [ W || aa164bMmsf && diTVHUrs >= cUC_kQ ( OybkLlsbacXN 
    && mBe12q4ivN0UhMH < ( E0sJmuNKrL7s3 ) ) ] && ! ! 
    ] > ! 738518693.49540287 ) * 699713884 . zB3p ) != 
    - Vl61GReEWXkI ( ) ] ;

}
int ;
int Yi28MXK1m , 

;
int ;
int WL ( ) {
}
int ;
int w0 ( ) {
  if ( Gfe7 )   ivysw_t2JYpIgb8is ;
else   if ( BdUoDVQS4As )   if ( sEU99JfvN12 )   v3aArSYTcDDgVl87 
    ;
else {
    FrA1 ;
    ZFROzgqMDntbnxr ;
    return XueJdjYt_FJdTTYD ;
  }&& 


}
int cHXSC9yunNeY4dVzW ( ) {
}
int ;
int uWrdO8 ( int C1knPkQ0hL , int j_3SvOQje9Hbu ) 
  {
}
int nVRdJIDLTfITG ( ) {
}
int ;
int ;
